v1.03 - Big maintenance patch 2020
	Improved CPU performance by 20%
	Upgraded pixi.js from version 4.4.1 to 5.1.6
	Changed music format from MP3 to OPUS, reducing asset filesize by 65% (54MB)
	Changed SFX format from WAV to OPUS, reducing asset filesize by 85% (12MB)
	Rewrote the gradient shader. Lots of extra steps removed and it's now fully documented
	Fixed broken music filepaths in the demo version
	Changed some CSS to prevent having two versions for iFrame and standalone hosting
	Fixed all setTimeout() string evaluation anti-patterns
	Replaced complicated Javascript fade animations with two lines of CSS
	Reduced number of Javascript var declarations from 269 to 173
	Applied better image compression, reducing asset filesize by 45% (55KB)
	Fixed many negative margin CSS anti-patterns
	Fixed three bugs that would result in inaccurate preloader console messages
	New console messages for background music
	Removed some old commented-out code
	Stripped trailing whitespace and replaced overlooked space-indents with tabs

v1.02 - Chrome breaks web audio standards
	Added a 'click to start' page to account for the new Chrome autoplay protection
	Fixed a bug that would sometimes crash the loading screen

v1.01 - Day 1 bugs
	Fixed a bug that exposed a piece of the end credits scene, allowing accidental page resets

v1.0 - Initial Release
	TRANSCEND, DIAMOND, and RAINBOW phases
	17 BGM tracks