@@ -270,19 +270,19 @@ function rareSpawnController() {
 							boostable = false;											//
 																						//
 							star.alpha = (Math.sin(q));									// Same calculations as normal, but faster. Click = 6% progress
-							q += 1/lifespan/400;										//
+							q += 1/lifespan/6.6;										//
 																						//
-							boostCounter += 0.04;										//
+							boostCounter += 2.4;										//
 							if (boostCounter >= 3.1) {									//
 								boostCounter = 0;										//
 								boostable = true;										//
-							} else { if (q < 3.1) { window.requestAnimationFrame(go); } }// otherwise, animate another frame and check again
+							} else { if (q < 3.1) { setTimeout(function() { window.requestAnimationFrame(go); }, 1000) } }	// Throttled to 1FPS
 						}																//
 					}																	//
 
 					function pulseBrightness() {
 						star.alpha = (Math.sin(q));										// calculate alpha with a sinewave
-						q += 1/lifespan/1150;											// increment. lifespan is tuned to be in minutes
+						q += 1/lifespan/19;												// increment. lifespan is tuned to be in minutes
 
 						if (q > 3.2) {													// if star has faded out.. (3.14 is one sinwave cycle)
 							star.destroy(true);											// kill it
@@ -290,7 +290,7 @@ function rareSpawnController() {
 							cow.resourceStars++;										//
 							cow.kongLifetimeShapes++;
 							updateResourceCounter('star');								//
-						 } else { window.requestAnimationFrame(pulseBrightness); }		// otherwise, animate another frame and check again
+						} else { setTimeout(function() { window.requestAnimationFrame(pulseBrightness); }, 1000) } // Throttled to 1FPS
 					}
 
 					window.requestAnimationFrame(pulseBrightness);						// starts the animation moving
